env-variablse: оставил users_to_mention

--- a/.env
+++ b/.env
@@ -1,5 +1,11 @@
 BOT_TOKEN=MTMzNjI3OTEwNzYzNzQ4MTU0Mg.GBhQSq.Zv2O4DQYVcOrCm1UgZJan5EYXyDdvzFybbjOVc
-BIRTHDAY_ROLE_ID=966081127116849223
-CHANNEL_ID=706224150704029697
-USERS_TO_MENTION=294860783811035136,294881060263821312,135024441884278784,904383863806128189
 DATABASE_FILE=data/bot_database.db
+
+#   ROLES_IDS
+BIRTHDAY_ROLE_ID=966081127116849223
+
+#   CHANNELS_IDS
+COLLOQUIUM_ID=706224150704029697
+
+#   USERS_IDS
+USERS_TO_MENTION=294860783811035136,294881060263821312,135024441884278784,904383863806128189
