--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BOT_TOKEN=MTMzNjI3OTEwNzYzNzQ4MTU0Mg.GBhQSq.Zv2O4DQYVcOrCm1UgZJan5EYXyDdvzFybbjOVc
+BOT_TOKEN=NzM4NzIyMzMyNDIzNDg3NTk5.G21j5l.U9LDYQT6dKdHeL12PJ8StcVuJfQCeYFw6Q2JGA
 DATABASE_FILE=data/bot_database.db
 
 #   ROLES_IDS
