--- a/.github/workflows/docker_compose_test.yml
+++ b/.github/workflows/docker_compose_test.yml
@@ -13,26 +13,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Шаг 1: Получить код из репозитория
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Docker Compose
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker-compose-plugin
+      # Шаг 2: Установить Docker
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v2
 
+      # Шаг 4: Передать секрет в ENV
+      - name: Set up environment variables
+        env:
+          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}  # Используем секрет
+
+      # Шаг 5: Запустить сборку и запуск контейнеров
       - name: Build and run Docker Compose
         run: |
           docker-compose -f docker-compose.yml up --build -d
 
+      # Шаг 6: Проверить, что контейнеры запущены
       - name: Check running containers
         run: |
           docker ps --filter "name=my_service" --format "{{.Status}}" | grep -q "Up"
 
-      - name: Check container logs
-        run: |
-          docker-compose logs my_service | grep -q "Application started"
-
+      # Шаг 7: Остановить и удалить контейнеры
       - name: Stop and remove containers
         run: |
           docker-compose -f docker-compose.yml down
