--- a/.github/workflows/docker_compose_test.yml
+++ b/.github/workflows/docker_compose_test.yml
@@ -3,14 +3,14 @@ name: Docker Compose Test
 on:
   push:
     branches:
-      - main
+      - main  # Запускать при пуше в ветку main
   pull_request:
     branches:
-      - main
+      - main  # Запускать при создании пул-реквеста в ветку main
 
 jobs:
   test-docker-compose:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Используем последнюю версию Ubuntu
 
     steps:
       # Шаг 1: Получить код из репозитория
@@ -21,12 +21,16 @@ jobs:
       - name: Set up Docker
         uses: docker/setup-buildx-action@v2
 
-      # Шаг 4: Передать секрет в ENV
+      # Шаг 3: Установить Docker Compose
+      - name: Set up Docker Compose
+        uses: docker/setup-compose-action@v2
+
+      # Шаг 4: Передать секретные переменные в ENV
       - name: Set up environment variables
         env:
-          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}  # Используем секрет
+          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}  # Используем секрет из GitHub Secrets
 
-      # Шаг 5: Запустить сборку и запуск контейнеров
+      # Шаг 5: Запустить сборку и запуск контейнеров через docker-compose
       - name: Build and run Docker Compose
         run: |
           docker-compose -f docker-compose.yml up --build -d
@@ -36,7 +40,12 @@ jobs:
         run: |
           docker ps --filter "name=my_service" --format "{{.Status}}" | grep -q "Up"
 
-      # Шаг 7: Остановить и удалить контейнеры
+      # Шаг 7: Проверить логи контейнера (опционально)
+      - name: Check container logs
+        run: |
+          docker-compose logs my_service | grep -q "Application started"
+
+      # Шаг 8: Остановить и удалить контейнеры
       - name: Stop and remove containers
         run: |
           docker-compose -f docker-compose.yml down
