--- a/.github/workflows/docker_compose_test.yml
+++ b/.github/workflows/docker_compose_test.yml
@@ -19,21 +19,21 @@ jobs:
 
       # Шаг 2: Установить Docker
       - name: Set up Docker
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-qemu-action@v2  # Устанавливаем Docker
 
-      # Шаг 3: Установить Docker Compose
+      # Шаг 3: Установить Docker Compose вручную
       - name: Set up Docker Compose
-        uses: docker/setup-compose-action@v2
-
-      # Шаг 4: Передать секретные переменные в ENV
-      - name: Set up environment variables
-        env:
-          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}  # Используем секрет из GitHub Secrets
+        run: |
+          sudo curl -L "https://github.com/docker/compose/releases/download/v2.20.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+          sudo chmod +x /usr/local/bin/docker-compose
+          docker-compose --version  # Проверяем установку 
 
       # Шаг 5: Запустить сборку и запуск контейнеров через docker-compose
       - name: Build and run Docker Compose
         run: |
           docker-compose -f docker-compose.yml up --build -d
+        env:
+          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}  # Используем секрет из GitHub Secrets
 
       # Шаг 6: Проверить, что контейнеры запущены
       - name: Check running containers
